# GU

./: .gitignore  README.md
CPSC121/PA1/: main.cpp
CPSC121/PA4/: main.cpp
CPSC121/PA5/: main.cpp  makefile  petstore.txt
CPSC121/PA6/: main.cpp
CPSC121/PA7/: functions.cpp  header.h  main.cpp  makefile  petstats.txt  petstore.txt
CPSC121/PA8/: functions.cpp
CPSC121/PA9/: header.h  main.cpp
CPSC121/final lab/: Dubinin_Final_Lab_Main.cpp
CPSC122/PA1/: eng&morseConvertor.cpp  eng&morseConvertorFunctions.cpp  eng&morseConvertorHeader.h  english.txt  makefile  morse.txt
CPSC122/PA2/: Graphs.ods  README.md  SortingAnalysisFunctions.cpp  SortingAnalysisHeader.h  SortingAnalysisMain.cpp  output.csv
CPSC122/PA3/: Main.cpp  PA3.cpp  PA3.h  README.md  input_words.txt  makefile  numbers.txt
CPSC122/PA4/: Main.cpp  PA4.cpp  PA4.h  README.md  makefile  truckload.txt
CPSC122/PA4/test/: CMakeLists.txt  Test.cpp  truckloadtest1.txt  truckloadtest2.txt
CPSC122/PA5/: Main.cpp  PA5.cpp  PA5.h  Song.cpp  Song.h  SongLibrary.cpp  SongLibrary.h  library.txt
CPSC122/PA7/: CMakeLists.txt  Calculator.cpp  Calculator.h  LinkedList.cpp  LinkedList.h  Main.cpp  PA7.cpp  PA7.h  Stack.cpp  Stack.h  input.txt
CPSC122/PA7/test/: Test.cpp
CPSC122/PA8/: CMakeLists.txt  DoublyLinkedList.cpp  DoublyLinkedList.h  DoublyLinkedQueue.cpp  DoublyLinkedQueue.h  Main.cpp  PA8.cpp  PA8.h  Sieve.cpp  Sieve.h
CPSC122/PA8/test/: Test.cpp
CPSC260/: Assignment6.s
PA2/: main.cpp
PA3/: main.cpp
PA5/: main  summaryreport.txt
PA6/: CMakeLists.txt
PA7/: CMakeLists.txt
PA8/: CMakeLists.txt  a.out  functions.cpp  header.h  main.cpp
PA9/: CMakeLists.txt  a.out  functions.cpp
final lab/: Dubinin_Final_Lab_Functions.cpp  Dubinin_Final_Lab_Header.h  petstore.txt
test/: CMakeLists.txt
(+48 files in other folders)
